[package]
name = "metro-agent"
description = "A modular, type-safe framework for intelligent agents, powered by a graph-based blackboard"
version = "0.0.0"
edition = "2021"
categories = ["ai"]
keywords = ["game", "gamedev", "intelligent agent", "blackboard"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/Hihaheho/metro-agent"

[features]
default = ["serde"]
serde = ["metro-blackboard/serde", "metro-macros/serde"]

[dependencies]
metro-blackboard = { version = "0.0.0", path = "../metro-blackboard" }
metro-macros = { version = "0.0.0", path = "../metro-macros" }
