[package]
name = "metro-agent"
description = "Build your modular intelligent agents based on a graph-structured blackboard"
version = "0.0.0"
edition = "2021"
categories = ["ai"]
keywords = ["game", "gamedev", "agent", "blackboard", "ai"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Hihaheho/metro"

[features]
default = []
full = ["serde", "derive"]
serde = [
  "dep:serde",
  "serde/derive",
  "metro-blackboard/serde",
  "metro-macros/serde",
]
derive = ["metro-macros"]

[dependencies]
metro-blackboard = { version = "0.0.0", path = "../metro-blackboard" }
metro-macros = { version = "0.0.0", path = "../metro-macros", optional = true }

serde = { version = "1", optional = true }
