[package]
name = "metro-blackboard"
description = "A graph-structured blackboard and query system with lock-free concurrency"
version = "0.0.0"
edition = "2021"
categories = ["data-structures"]
keywords = ["blackboard", "graph", "ai", "agent"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Hihaheho/metro"

[features]
default = ["btree"]
full = ["derive", "serde"]
derive = ["metro-macros"]
serde = ["dep:serde", "serde/derive", "uuid/serde", "metro-macros/serde"]
btree = []

[dependencies]
serde = { version = "1", optional = true }
uuid = { version = "1" }
metro-macros = { version = "0.0.0", path = "../metro-macros", optional = true }
