[package]
name = "metro-macros"
description = "Macros for Metro Engine"
version = "0.0.0"
edition = "2021"
categories = []
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Hihaheho/metro"

[lib]
proc-macro = true

[features]
default = []
serde = []


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
metro-blackboard = { path = "../metro-blackboard", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
